--- a/index.html
+++ b/index.html
@@ -5,29 +5,36 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title lang="en">WebStudio</title>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
-		<header>
+		<header class="header-page">
 			<nav>
-				<a href="./index.html" lang="en">WebStudio</a>
-				<ul>
-					<li>
-						<a href=""></a>
-						Студія
+				<a class="logo" href="./index.html" lang="en">
+					<span class="logo-web">Web</span>
+					Studio
+				</a>
+
+				<ul class="nav-site list">
+					<li class="nav-item">
+						<a class="nav-link" href="">Студія</a>
 					</li>
-					<li>
-						<a href=""></a>
-						Портфоліо
+					<li class="nav-item">
+						<a class="nav-link" href="">Портфоліо</a>
 					</li>
-					<li>
-						<a href=""></a>
-						Контакти
+					<li class="nav-item">
+						<a class="nav-link" href="">Контакти</a>
 					</li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+
+			<ul class="header-contact list">
+				<li class="header-item">
+					<a class="header-contact" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+				</li>
+				<li class="header-item">
+					<a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+				</li>
 			</ul>
 		</header>
 		<main>
@@ -38,7 +45,7 @@
 			</section>
 			<!--Osoblivosti-->
 			<section>
-				<h2 hidden>Переваги</h2>
+				<h2 class="visually-hidden">Переваги</h2>
 				<ul>
 					<li>
 						<h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -102,9 +109,7 @@
 			<address>
 				<ul>
 					<li>
-						<a href="https://goo.gl/maps/JjhD47oRXVSocKC27" target="_blank" rel="noreferrer noopener">
-							м. Київ, пр-т Лесі Українки, 26
-						</a>
+						<a href="https://goo.gl/maps/JjhD47oRXVSocKC27" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
 					</li>
 					<li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
