--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		<header class="header-page">
 			<nav>
 				<a class="logo" href="./index.html" lang="en">
-					<span class="logo-web">Web</span>
-					Studio
+					<span class="logo-web">Web</span>Studio
 				</a>
 
 				<ul class="nav-site list">
@@ -39,35 +38,35 @@
 		</header>
 		<main>
 			<!--Hero-->
-			<section>
-				<h1>Ефективні рішення для вашого бізнесу</h1>
-				<button type="button">Замовити послугу</button>
+			<section class="hero">
+				<h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+				<button class="button" type="button">Замовити послугу</button>
 			</section>
 			<!--Osoblivosti-->
-			<section>
+			<section class="adv">
 				<h2 class="visually-hidden">Переваги</h2>
-				<ul>
-					<li>
-						<h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-						<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+				<ul class="adv-comp list">
+					<li class="adv-item">
+						<h3 class="adv-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+						<p class="adv-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
-					<li>
-						<h3>ПУНКТУАЛЬНІСТЬ</h3>
-						<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+					<li class="adv-item">
+						<h3 class="adv-title">ПУНКТУАЛЬНІСТЬ</h3>
+						<p class="adv-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
-					<li>
-						<h3>ПЛАНУВАННЯ</h3>
-						<p>Так само консультація з широким активом значною мірою зумовлює.</p>
+					<li class="adv-item">
+						<h3 class="adv-title">ПЛАНУВАННЯ</h3>
+						<p class="adv-text">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
-					<li>
-						<h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-						<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+					<li class="adv-item">
+						<h3 class="adv-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+						<p class="adv-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
 				</ul>
 			</section>
 			<!--Zanjatia-->
-			<section>
-				<h2>Чим ми займаємося</h2>
+			<section class="">
+				<h2 class="">Чим ми займаємося</h2>
 				<ul>
 					<li><img src="./img/task_1.jpg" alt="typing text" width="370" height="294" /></li>
 					<li><img src="./img/task_2.jpg" alt="checking product" width="370" height="294" /></li>
@@ -75,30 +74,30 @@
 				</ul>
 			</section>
 			<!--TEAM-->
-			<section>
-				<h2>Наша команда</h2>
+			<section class="">
+				<h2 class="">Наша команда</h2>
 				<ul>
 					<li>
 						<img src="./img/card_1.jpg" alt="Фото дизайнеру продукту" width="270" height="260" />
-						<h3>Ігор Дем'яненко</h3>
+						<h3 class="">Ігор Дем'яненко</h3>
 						<p lang="en">Product Designer</p>
 					</li>
 
 					<li>
 						<img src="./img/card_2.jpg" alt="Фото ФронтЕнд розробника" width="270" height="260" />
-						<h3>Ольга Рєпіна</h3>
+						<h3 class="">Ольга Рєпіна</h3>
 						<p lang="en">Frontend Developer</p>
 					</li>
 
 					<li>
 						<img src="./img/card_3.jpg" alt="Фото маркетолога" width="270" height="260" />
-						<h3>Микола Тарасов</h3>
+						<h3 class="">Микола Тарасов</h3>
 						<p lang="en">Marketing</p>
 					</li>
 
 					<li>
 						<img src="./img/card_4.jpg" alt="Фото дизейнера користувацького інтефейсу" width="270" height="260" />
-						<h3>Михайло Єрмаков</h3>
+						<h3 class="">Михайло Єрмаков</h3>
 						<p lang="en">UI Designer</p>
 					</li>
 				</ul>
