--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<header class="header-page">
 			<nav>
 				<a class="logo" href="./index.html" lang="en">
-					<span class="logo-web">Web</span>Studio
+					Web
+					<span class="logo-web">Studio</span>
 				</a>
 
 				<ul class="nav-site list">
@@ -29,7 +30,9 @@
 
 			<ul class="header-contact list">
 				<li class="header-item">
-					<a class="header-contact" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+					<a class="header-contact" href="mailto:info@devstudio.com" lang="en">
+						info@devstudio.com
+					</a>
 				</li>
 				<li class="header-item">
 					<a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
@@ -48,11 +51,15 @@
 				<ul class="adv-comp list">
 					<li class="adv-item">
 						<h3 class="adv-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-						<p class="adv-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+						<p class="adv-text">
+							Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+						</p>
 					</li>
 					<li class="adv-item">
 						<h3 class="adv-title">ПУНКТУАЛЬНІСТЬ</h3>
-						<p class="adv-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+						<p class="adv-text">
+							Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+						</p>
 					</li>
 					<li class="adv-item">
 						<h3 class="adv-title">ПЛАНУВАННЯ</h3>
@@ -60,58 +67,91 @@
 					</li>
 					<li class="adv-item">
 						<h3 class="adv-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-						<p class="adv-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+						<p class="adv-text">
+							Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+						</p>
 					</li>
 				</ul>
 			</section>
 			<!--Zanjatia-->
-			<section class="">
-				<h2 class="">Чим ми займаємося</h2>
-				<ul>
+			<section class="work">
+				<h2 class="work-title">Чим ми займаємося</h2>
+				<ul class="list">
 					<li><img src="./img/task_1.jpg" alt="typing text" width="370" height="294" /></li>
 					<li><img src="./img/task_2.jpg" alt="checking product" width="370" height="294" /></li>
 					<li><img src="./img/task_3.jpg" alt="choosing product" width="370" height="294" /></li>
 				</ul>
 			</section>
 			<!--TEAM-->
-			<section class="">
-				<h2 class="">Наша команда</h2>
-				<ul>
-					<li>
-						<img src="./img/card_1.jpg" alt="Фото дизайнеру продукту" width="270" height="260" />
-						<h3 class="">Ігор Дем'яненко</h3>
-						<p lang="en">Product Designer</p>
+			<section class="team">
+				<h2 class="team-title">Наша команда</h2>
+
+				<ul class="team-comp list">
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="./img/card_1.jpg"
+							alt="Фото дизайнеру продукту"
+							width="270"
+							height="260"
+						/>
+						<h3 class="team-name">Ігор Дем'яненко</h3>
+						<p class="team-text" lang="en">Product Designer</p>
 					</li>
 
-					<li>
-						<img src="./img/card_2.jpg" alt="Фото ФронтЕнд розробника" width="270" height="260" />
-						<h3 class="">Ольга Рєпіна</h3>
-						<p lang="en">Frontend Developer</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="./img/card_2.jpg"
+							alt="Фото ФронтЕнд розробника"
+							width="270"
+							height="260"
+						/>
+						<h3 class="team-name">Ольга Рєпіна</h3>
+						<p class="team-text" lang="en">Frontend Developer</p>
 					</li>
 
-					<li>
-						<img src="./img/card_3.jpg" alt="Фото маркетолога" width="270" height="260" />
-						<h3 class="">Микола Тарасов</h3>
-						<p lang="en">Marketing</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="./img/card_3.jpg"
+							alt="Фото маркетолога"
+							width="270"
+							height="260"
+						/>
+						<h3 class="team-name">Микола Тарасов</h3>
+						<p class="team-text" lang="en">Marketing</p>
 					</li>
 
-					<li>
-						<img src="./img/card_4.jpg" alt="Фото дизейнера користувацького інтефейсу" width="270" height="260" />
-						<h3 class="">Михайло Єрмаков</h3>
-						<p lang="en">UI Designer</p>
+					<li class="team-item">
+						<img
+							class="team-img"
+							src="./img/card_4.jpg"
+							alt="Фото дизейнера користувацького інтефейсу"
+							width="270"
+							height="260"
+						/>
+						<h3 class="team-name">Михайло Єрмаков</h3>
+						<p class="team-text" lang="en">UI Designer</p>
 					</li>
 				</ul>
 			</section>
 		</main>
 		<footer>
-			<a href="./index.html" lang="en">WebStudio</a>
+			<a class="flogo" href="./index.html" lang="en">WebStudio</a>
 			<address>
-				<ul>
-					<li>
-						<a href="https://goo.gl/maps/JjhD47oRXVSocKC27" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a>
+				<ul class="adress-comp">
+					<li class="adrss-irem list">
+						<a
+							href="https://goo.gl/maps/JjhD47oRXVSocKC27"
+							target="_blank"
+							rel="noreferrer noopener"
+						>
+							м. Київ, пр-т Лесі Українки, 26
+						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li class="adrss-irem list"><a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a></li>
+					<li class="adrss-irem list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
