--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,34 @@
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
+      <header class="header-page">
+      <nav>
+        <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
+
+        <ul class="nav-site list">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Студія</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link current" href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+
+      <ul class="header-contact list">
+        <li class="header-item">
+          <a class="header-contact" href="mailto:info@devstudio.com" lang="en">
+            info@devstudio.com
+          </a>
+        </li>
+        <li class="header-item">
+          <a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
     
 </body>
 </html> 
