--- a/portfolio.html
+++ b/portfolio.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
-<body>
-      <header class="header-page">
+  </head>
+  <body>
+    <header class="header-page">
       <nav>
         <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
 
@@ -36,6 +36,26 @@
         </li>
       </ul>
     </header>
-    
-</body>
-</html> 
+    <main>
+      <section class="portfolio">
+        <ul class="portf-site list">
+          <li class="portf-item">
+            <a href="" class="portf-link">Усі</a>
+          </li>
+          <li class="portf-item">
+            <a href="" class="portf-link">Веб-сайти</a>
+          </li>
+          <li class="portf-item">
+            <a href="" class="portf-link">Додатки</a>
+          </li>
+          <li class="portf-item">
+            <a href="" class="portf-link">Дизайн</a>
+          </li>
+          <li class="portf-item">
+            <a href="" class="portf-link">Маркетинг</a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
+</html>
