--- a/portfolio.html
+++ b/portfolio.html
@@ -40,19 +40,24 @@
       <section class="portf">
         <ul class="portf-filter list">
           <li class="portf-item">
-            <a href="" class="portf-link">Усі</a>
+            <button class="portf-link">Усі</button>
+            <button class="portf-link">Веб-сайти</button>
+            <button class="portf-link">Додатки</button>
+            <button class="portf-link">Дизайн</button>
+            <button class="portf-link">Маркетинг</button>
+            <a href="" class="portf-link"></a>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link">Веб-сайти</a>
+            <a href="" class="portf-link"></a>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link">Додатки</a>
+            <a href="" class="portf-link"></a>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link">Дизайн</a>
+            <a href="" class="portf-link"></a>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link">Маркетинг</a>
+            <a href="" class="portf-link"></a>
           </li>
         </ul>
 
@@ -69,17 +74,17 @@
           </li>
           <li class="portf-progect">
             <img src="./img/portf/3.jpg" alt="Додаток" class="portf-img" />
-            <h3 class="portf-name">Ресторан <span lang="eng">Seafood</span></h3>
+            <h3 class="portf-name">Ресторан<span lang="eng">Seafood</span></h3>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/4.jpg" alt="Маркетинг" class="portf-img" />
-            <h3 class="portf-name">Проєкт <span lang="eng">Prime</span></h3>
+            <h3 class="portf-name">Проєкт<span lang="eng">Prime</span></h3>
             <p class="portf-text">Маркетинг</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/5.jpg" alt="Додаток" class="portf-img" />
-            <h3 class="portf-name">Проєкт <span lang="eng">Boxes</span></h3>
+            <h3 class="portf-name">Проєкт<span lang="eng">Boxes</span></h3>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
