--- a/portfolio.html
+++ b/portfolio.html
@@ -40,71 +40,90 @@
       <section class="portf">
         <ul class="portf-filter list">
           <li class="portf-item">
-            <button class="portf-link">Усі</button>
-            <button class="portf-link">Веб-сайти</button>
-            <button class="portf-link">Додатки</button>
-            <button class="portf-link">Дизайн</button>
-            <button class="portf-link">Маркетинг</button>
-            <a href="" class="portf-link"></a>
+            <button class="portf-link" type="button">Усі</button>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link"></a>
+            <button class="portf-link" type="button">Веб-сайти</button>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link"></a>
+            <button class="portf-link" type="button">Додатки</button>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link"></a>
+            <button class="portf-link" type="button">Дизайн</button>
           </li>
           <li class="portf-item">
-            <a href="" class="portf-link"></a>
+            <button class="portf-link" type="button">Маркетинг</button>
           </li>
         </ul>
 
         <ul class="portf-cont list">
           <li class="portf-progect">
-            <img src="./img/portf/1.jpg" alt="Веб-сайт" class="portf-img" />
+            <img
+              src="./img/portf/1.jpg"
+              alt="Веб-сайт"
+              class="portf-img"
+              width="370"
+              height="294"
+            />
             <h3 class="portf-name">Технокряк</h3>
             <p class="portf-text">Веб-сайт</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/2.jpg" alt="Дизайн" class="portf-img" />
+            <img src="./img/portf/2.jpg" alt="Дизайн" class="portf-img" width="370" height="294" />
             <h3 class="portf-name">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
             <p class="portf-text">Дизайн</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/3.jpg" alt="Додаток" class="portf-img" />
-            <h3 class="portf-name">Ресторан<span lang="eng">Seafood</span></h3>
+            <img src="./img/portf/3.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
+            <h3 class="portf-name">Ресторан<span lang="en">Seafood</span></h3>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/4.jpg" alt="Маркетинг" class="portf-img" />
-            <h3 class="portf-name">Проєкт<span lang="eng">Prime</span></h3>
+            <img
+              src="./img/portf/4.jpg"
+              alt="Маркетинг"
+              class="portf-img"
+              width="370"
+              height="294"
+            />
+            <h3 class="portf-name">Проєкт<span lang="en">Prime</span></h3>
             <p class="portf-text">Маркетинг</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/5.jpg" alt="Додаток" class="portf-img" />
-            <h3 class="portf-name">Проєкт<span lang="eng">Boxes</span></h3>
+            <img src="./img/portf/5.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
+            <h3 class="portf-name">Проєкт<span lang="en">Boxes</span></h3>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/6.jpg" alt="Веб-сайт" class="portf-img" />
-            <h3 class="portf-name" lang="eng">Inspiration has no Borders</h3>
+            <img
+              src="./img/portf/6.jpg"
+              alt="Веб-сайт"
+              class="portf-img"
+              width="370"
+              height="294"
+            />
+            <h3 class="portf-name" lang="en">Inspiration has no Borders</h3>
             <p class="portf-text">Веб-сайт</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/7.jpg" alt="Дизайн" class="portf-img" />
-            <h3 class="portf-name">Видання <span lang="eng">Limited Edition</span></h3>
+            <img src="./img/portf/7.jpg" alt="Дизайн" class="portf-img" width="370" height="294" />
+            <h3 class="portf-name">Видання <span lang="en">Limited Edition</span></h3>
             <p class="portf-text">Дизайн</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/8.jpg" alt="Маркетинг" class="portf-img" />
-            <h3 class="portf-name">Проєкт <span lang="eng">LAB</span></h3>
+            <img
+              src="./img/portf/8.jpg"
+              alt="Маркетинг"
+              class="portf-img"
+              width="370"
+              height="294"
+            />
+            <h3 class="portf-name">Проєкт <span lang="en">LAB</span></h3>
             <p class="portf-text">Маркетинг</p>
           </li>
           <li class="portf-progect">
-            <img src="./img/portf/9.jpg" alt="Додаток" class="portf-img" />
-            <h3 class="portf-name" lang="eng">Growing Business</h3>
+            <img src="./img/portf/9.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
+            <h3 class="portf-name" lang="en">Growing Business</h3>
             <p class="portf-text">Додаток</p>
           </li>
         </ul>
