--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">WebStudio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header-page">
       <nav>
-        <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
+        <a class="logo" href="./index.html" lang="en">Web<span class="logo-black">Studio</span></a>
 
         <ul class="nav-site list">
           <li class="nav-item">
@@ -42,7 +46,7 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="button" type="button">Замовити послугу</button>
       </section>
-      <!--Osoblivosti-->
+      <!--Advant-->
       <section class="adv">
         <h2 class="visually-hidden">Переваги</h2>
         <ul class="adv-comp list">
@@ -70,7 +74,7 @@
           </li>
         </ul>
       </section>
-      <!--Zanjatia-->
+      <!--WORK-->
       <section class="work">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="list">
@@ -135,7 +139,7 @@
       </section>
     </main>
     <footer>
-      <a class="logo f" href="./index.html" lang="en"> <span class="logo-web">Web</span>Studio</a>
+      <a class="logo" href="./index.html" lang="en">Web<span class="logo-white">Studio</span></a>
 
       <address>
         <ul class="adress-comp">
