--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title lang="en">Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header-page">
       <nav>
-        <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
+        <a class="logo" href="./index.html" lang="en">Web<span class="logo-black">Studio</span></a>
 
         <ul class="nav-site list">
           <li class="nav-item">
@@ -37,22 +41,23 @@
       </ul>
     </header>
     <main>
+      <h1 class="visually-hidden">Портфоліо робіт веб-студії</h1>
       <section class="portf">
-        <ul class="portf-filter list">
-          <li class="portf-item">
-            <button class="portf-link" type="button">Усі</button>
+        <ul class="filter list">
+          <li class="filter-item">
+            <button class="filter-button" type="button">Усі</button>
           </li>
-          <li class="portf-item">
-            <button class="portf-link" type="button">Веб-сайти</button>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Веб-сайти</button>
           </li>
-          <li class="portf-item">
-            <button class="portf-link" type="button">Додатки</button>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Додатки</button>
           </li>
-          <li class="portf-item">
-            <button class="portf-link" type="button">Дизайн</button>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Дизайн</button>
           </li>
-          <li class="portf-item">
-            <button class="portf-link" type="button">Маркетинг</button>
+          <li class="filter-item">
+            <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
 
@@ -65,17 +70,17 @@
               width="370"
               height="294"
             />
-            <h3 class="portf-name">Технокряк</h3>
+            <h2 class="portf-name">Технокряк</h2>
             <p class="portf-text">Веб-сайт</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/2.jpg" alt="Дизайн" class="portf-img" width="370" height="294" />
-            <h3 class="portf-name">Постер<span lang="en">New Orlean vs Golden Star</span></h3>
+            <h2 class="portf-name">Постер<span lang="en">New Orlean vs Golden Star</span></h2>
             <p class="portf-text">Дизайн</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/3.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
-            <h3 class="portf-name">Ресторан<span lang="en">Seafood</span></h3>
+            <h2 class="portf-name">Ресторан<span lang="en">Seafood</span></h2>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
@@ -86,12 +91,12 @@
               width="370"
               height="294"
             />
-            <h3 class="portf-name">Проєкт<span lang="en">Prime</span></h3>
+            <h2 class="portf-name">Проєкт<span lang="en">Prime</span></h2>
             <p class="portf-text">Маркетинг</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/5.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
-            <h3 class="portf-name">Проєкт<span lang="en">Boxes</span></h3>
+            <h2 class="portf-name">Проєкт<span lang="en">Boxes</span></h2>
             <p class="portf-text">Додаток</p>
           </li>
           <li class="portf-progect">
@@ -102,12 +107,12 @@
               width="370"
               height="294"
             />
-            <h3 class="portf-name" lang="en">Inspiration has no Borders</h3>
+            <h2 class="portf-name" lang="en">Inspiration has no Borders</h2>
             <p class="portf-text">Веб-сайт</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/7.jpg" alt="Дизайн" class="portf-img" width="370" height="294" />
-            <h3 class="portf-name">Видання <span lang="en">Limited Edition</span></h3>
+            <h2 class="portf-name">Видання <span lang="en">Limited Edition</span></h2>
             <p class="portf-text">Дизайн</p>
           </li>
           <li class="portf-progect">
@@ -118,16 +123,42 @@
               width="370"
               height="294"
             />
-            <h3 class="portf-name">Проєкт <span lang="en">LAB</span></h3>
+            <h2 class="portf-name">Проєкт <span lang="en">LAB</span></h2>
             <p class="portf-text">Маркетинг</p>
           </li>
           <li class="portf-progect">
             <img src="./img/portf/9.jpg" alt="Додаток" class="portf-img" width="370" height="294" />
-            <h3 class="portf-name" lang="en">Growing Business</h3>
+            <h2 class="portf-name" lang="en">Growing Business</h2>
             <p class="portf-text">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
+    <footer>
+      <a class="logo" href="./index.html" lang="en">Web<span class="logo-white">Studio</span></a>
+
+      <address>
+        <ul class="adress-comp">
+          <li class="adress-item list">
+            <a
+              class="adress-city"
+              href="https://goo.gl/maps/JjhD47oRXVSocKC27"
+              target="_blank"
+              rel="noreferrer noopener"
+            >
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li class="adress-item list">
+            <a class="adress-contact" href="mailto:info@devstudio.com" lang="en">
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="adress-item list">
+            <a class="adress-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
